isolate z-index fix to only touch devices. (this fix causes paint issues in chrome on the desktop.)

--- a/src/main/resources/scss/common/components/_forms.scss
+++ b/src/main/resources/scss/common/components/_forms.scss
@@ -67,10 +67,10 @@ label:not(.css3unsupported) {
 	$checkbox: 'input[type="checkbox"]';
 	$radiobox: 'input[type="radio"]';
 
-	span {
+	.touch & span {
 		position: relative;
 		z-index: -1; // fixes an issue on iOS where you can't click the label to toggle the input.
-		backface-visibility: hidden; // fixes a weird paint issue in chrome (44.0.2383.0 dev) with the dev tools open in which the labels would appear incorrectly positioned.
+		// backface-visibility: hidden; // fixes a weird paint issue in chrome (44.0.2383.0 dev) with the dev tools open in which the labels would appear incorrectly positioned.
 	}
 
 	& > #{$checkbox} {
@@ -81,7 +81,11 @@ label:not(.css3unsupported) {
 			line-height: 3;
 			padding-left: 1.5rem;
 			position: relative;
-			z-index: -1; // fixes an issue on iOS where you can't click the label to toggle the input.
+
+			.touch & {
+				z-index: -1; // fixes an issue on iOS where you can't click the label to toggle the input.
+			}
+			
 
 			&::before {
 				content: '';
